--- a/todo-ng/src/app/archived-todo-list/archived-todo-list.component.html
+++ b/todo-ng/src/app/archived-todo-list/archived-todo-list.component.html
@@ -1,3 +1,16 @@
-<p>
-  archived-todo-list works!
-</p>
+<div *ngIf="(dataSource | async)?.length">
+    <mat-table [dataSource]="dataSource | async" class="mat-elevation-z8">
+      <ng-container matColumnDef="content">
+        <mat-header-cell *matHeaderCellDef> Todo </mat-header-cell>
+        <mat-cell *matCellDef="let todo"> {{todo.content}} </mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="created">
+        <mat-header-cell *matHeaderCellDef> Created </mat-header-cell>
+        <mat-cell *matCellDef="let todo">
+          {{todo.created | date:'mediumDate'}}
+        </mat-cell>
+      </ng-container>
+        <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+        <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+    </mat-table>
+  </div>
