--- a/todo-ng/src/app/my-nav/my-nav.component.html
+++ b/todo-ng/src/app/my-nav/my-nav.component.html
@@ -5,8 +5,8 @@
       [opened]="!(isHandset$ | async)">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item routerLink="/todos">Todos</a>
-      <a mat-list-item routerLink="/archived">Archived Todos</a>
+      <a mat-list-item routerLink="/todos">Todo List</a>
+      <a mat-list-item routerLink="/archived">Archived</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
